v1.0/service_tomcat_v1.0.yaml
### v1.0  ###

apiVersion: v1
kind: Service
metadata:
  name: tomcat-index-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 172.20.100.111
  selector:
    app: tomcat
    name: index
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-films-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 172.20.100.112
  selector:
    app: tomcat
    name: films
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-login-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 172.20.100.113
  selector:
    app: tomcat
    name: login
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-join-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 172.20.100.114
  selector:
    app: tomcat
    name: join
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-mypage-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 172.20.100.115
  selector:
    app: tomcat
    name: mypage
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-purchase-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 172.20.100.116
  selector:
    app: tomcat
    name: purchase
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
